Small changes to about page

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Aaron Imani
+title: blank
 first_name: Aaron
 middle_name:
 last_name: Imani
