--- a/_config.yml
+++ b/_config.yml
@@ -191,6 +191,11 @@ exclude:
   - README.md
   - readme_preview/
   - vendor
+  - _news/announcement_*.md
+  - _pages/blog.md
+  - _posts/
+  - _projects/?_project.md
+  - assets/jupyter/blog.ipynb
 keep_files:
   - CNAME
   - .nojekyll
@@ -339,6 +344,7 @@ external_links:
   rel: external nofollow noopener
   target: _blank
   exclude:
+
 
 # -----------------------------------------------------------------------------
 # Responsive WebP Images
