Add Alireza to my possible author name

--- a/_config.yml
+++ b/_config.yml
@@ -269,7 +269,7 @@ display_categories: ["external-services"] # these categories will be displayed o
 
 scholar:
   last_name: [Imani]
-  first_name: [Aaron, A.]
+  first_name: [Aaron, A., Alireza]
 
   style: apa
   locale: en
